<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_add_book"
    tools:context="com.cse110.mybookstore.AddBook"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:gravity="top|center">


    <include android:id="@id/app_bar" layout="@layout/toolbar"/>


    <!--Title-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_input"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:maxLines="1"
        android:hint="Title"
        android:layout_below="@id/app_bar"
        />

    <!--Author-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/author_input"
        android:layout_below="@+id/title_input"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:maxLines="1"
        android:hint="Author"
        />

    <!--ISBN-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isbn_input"
        android:layout_below="@+id/author_input"
        android:layout_alignLeft="@+id/author_input"
        android:layout_alignStart="@+id/author_input"
        android:maxLines="1"
        android:ems="10"
        android:hint="ISBN"
        android:maxLength="13"
        android:inputType="number"
        />

    <!--Dollar sign-->
    <TextView
        android:id="@+id/dollar_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/isbn_input"
        android:layout_below="@id/author_input"
        android:text="$"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

    <!--Price-->
    <EditText
        android:id="@+id/price_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="4"
        android:hint="Price"
        android:ems="10"
        android:layout_above="@+id/spinner"
        android:layout_alignRight="@+id/author_input"
        android:layout_alignEnd="@+id/author_input"
        android:layout_toRightOf="@+id/dollar_sign"
        android:layout_toEndOf="@+id/dollar_sign"
        />

    <!--Format-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/isbn_input"
        android:layout_alignLeft="@+id/isbn_input"
        android:layout_alignStart="@+id/isbn_input"
        android:layout_alignRight="@+id/price_input"
        android:layout_alignEnd="@+id/price_input"/>

    <!--Description-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/description_input"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:hint="Description"
        android:maxLength="90"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner"/>

    <!--Sell Button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="SELL"
        android:id="@+id/add_book_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/backgroundColor"
        android:background="@color/colorPrimaryBackground"/>

</RelativeLayout>
