...
        android:layout_marginBottom="39dp"
        />


    <!--Title-->
    <TextView
        android:id="@+id/titleInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
...
